feat: update content
Added some information about myself and NeoGCamp

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>kartikrobin-site</title>
   </head>
   <body>
-    Hi! I'm Kartik Robin
+    <h1>Hi! I'm Kartik Robin</h1>
+    <p>I'm learning full stack web development from NeoG.Camp.</p>
+    <p>
+      NeoG.Camp is a 8 month long bootcamp that makes you a full stack web
+      developer.
+    </p>
+    <h2>Things you will tought there:</h2>
+    <ul>
+      <li>JavaScript</li>
+      <li>Git & GitHub</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Node.js</li>
+      <li>MongoDB</li>
+      <li>React.js</li>
+      <li>Express.js</li>
+    </ul>
   </body>
 </html>
