update: favorite books
Added a list of my favorite books

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
       <li>React.js</li>
       <li>Express.js</li>
     </ul>
+    <p>Here the list of my favorite books:</p>
+    <ol>
+      <li>Bhagvat Geeta</li>
+      <li>The Power Within</li>
+      <li>Power of Habit</li>
+      <li>Animal Farm</li>
+      <li>Ego Is The Enemy</li>
+    </ol>
     <script src=""></script>
   </body>
 </html>
